--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "short_name": "PWA",
     "name": "PWA sample app",
     "display": "standalone",
-    "start_url": "index.html",
+    "start_url": "file:///Users/kashiwagiwataru/Desktop/kashiwagi_wataru.github.io/index.html",
     "icons": [
         {
             "src": "images/icon.jpg",
