--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,5 @@
     "short_name": "PWA",
     "name": "PWA sample app",
     "display": "standalone",
-    "start_url": "index.html",
-    
+    "start_url": "index.html"
 }
